--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <div class="container">
+      <a class="navbar-brand" href="">
+        <img class="redondear" src="../assets/Sali_restaurante.png" alt="Sali" width="30" height="24">
+      </a>
+    </div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="mesas">Mesas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="productos">Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pedidos">Pedidos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <router-outlet></router-outlet>
