Agregado degradado a barra de navegación

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 
 .navbar{
-    background-color: #F2CEAE;
+    //background-color: #F2CEAE;
+    background: linear-gradient(180deg,#F27F1B, 30%, #F2CEAE);
 }
 
 .redondear{
