--- a/src/app/pages/mesas/mesas.component.html
+++ b/src/app/pages/mesas/mesas.component.html
@@ -1,1 +1,20 @@
-<p>mesas works!</p>
+
+<div class="container text-center mesas-container">
+    <div class="row">
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
+    </div>
+  </div>
