Estilos de página mesas listos

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
+
+$negro: #251B26;
+$amarillo: #F2B705;
+$naranja: #F27F1B;
+$marron: #8C4C14;
+$crema: #F2CEAE;
