--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,8 @@
+@import "src/styles.scss";
 
 .navbar{
     //background-color: #F2CEAE;
-    background: linear-gradient(180deg,#F27F1B, 30%, #F2CEAE);
+    background: linear-gradient(180deg, $naranja, 30%, $crema);
 }
 
 .redondear{
