--- a/src/app/pages/mesas/mesas.component.html
+++ b/src/app/pages/mesas/mesas.component.html
@@ -1,20 +1,35 @@
 
 <div class="container text-center mesas-container">
-    <div class="row">
-      <div class="col">
-        Column
+    <div class="fila">
+      <div class="columna">
+        <button class="boton-mesa">
+            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+            <p>Mesa 1</p>
+        </button>
       </div>
-      <div class="col">
-        Column
+      <div class="columna">
+        <button class="boton-mesa">
+            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+            <p>Mesa 2</p>
+        </button>
       </div>
-      <div class="col">
-        Column
+      <div class="columna">
+        <button class="boton-mesa">
+            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+            <p>Mesa 3</p>
+        </button>
       </div>
-      <div class="col">
-        Column
+      <div class="columna">
+        <button class="boton-mesa">
+            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+            <p>Mesa 4</p>
+        </button>
       </div>
-      <div class="col">
-        Column
+      <div class="columna">
+        <button class="boton-mesa">
+            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+            <p>Mesa 5</p>
+        </button>
       </div>
     </div>
   </div>
