--- a/src/app/pages/mesas/mesas.component.scss
+++ b/src/app/pages/mesas/mesas.component.scss
@@ -1,3 +1,30 @@
+@import "src/styles.scss";
+
 .mesas-container{
-    padding-top: 100px;
+    padding-top: 4em;
+}
+
+.fila{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.boton-mesa{
+    background: none;
+    border: 0em;
+    padding-bottom: 2em;
+}
+
+@media screen and (min-width: 768px) {
+    .fila{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .fila{
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
 }
