--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="mesas">Mesas</a>
+          <a class="nav-link" routerLink="mesas">Mesas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="productos">Productos</a>
+          <a class="nav-link" routerLink="productos">Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pedidos">Pedidos</a>
+          <a class="nav-link" routerLink="pedidos">Pedidos</a>
         </li>
       </ul>
     </div>
