Creada página de menu y agregado link a mesas

--- a/src/app/pages/mesas/mesas.component.html
+++ b/src/app/pages/mesas/mesas.component.html
@@ -2,8 +2,10 @@
 <div class="container text-center mesas-container">
     <div class="mesa">
         <button class="boton-mesa">
-            <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
-            <p>Mesa 1</p>
+            <a routerLink="menu">
+              <img src="../assets/table_atention.png" alt="Mesa" width="75em" height="75em">
+              <p>Mesa 1</p>
+            </a>
         </button>
       </div>
       <div class="mesa">
