--- a/src/app/pages/mesas/mesas.component.scss
+++ b/src/app/pages/mesas/mesas.component.scss
@@ -10,6 +10,10 @@
     background: none;
     border: 0em;
     padding-bottom: 2em;
+    a{
+        text-decoration: none;
+        color: $negro;
+    }
 }
 
 @media screen and (min-width: 768px) {
