--- a/src/app/pages/productos/productos.component.scss
+++ b/src/app/pages/productos/productos.component.scss
@@ -15,7 +15,38 @@
     justify-content: center;
     align-items: center;
 
-    .producto{
-        //padding-bottom: 1em;
+    .cantidad{
+        position: relative;
+        padding-left: 1em;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        input{
+            /*width: 45px;
+            height: 42px;
+            line-height: 1.65;
+            padding-left: 18px;*/
+            border: 1px solid #eee;
+            position: relative; 
+            padding: 5px;
+            padding-right: 5px;
+            width: 3em;
+            float: left;
+            display: block;
+        }
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            opacity: 1;
+        }
+        input[type=number]::-webkit-outer-spin-button, 
+        input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: inner-spin-button !important;
+            width: 18px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+      }
     }
+
 }
