Iniciada tabla de pedidos

--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,4 +1,4 @@
-<h1>Atención - Mesa {{idMesa}}</h1>
+<h1>Atención - Mesa {{pedidoPorMesa.idMesa}}</h1>
 
 <app-productos (pedido)="obtenerProductos($event)"></app-productos>
 
