--- a/src/app/pages/pedido/pedido.component.scss
+++ b/src/app/pages/pedido/pedido.component.scss
@@ -7,3 +7,9 @@
     display: flex;
     justify-content: center;
 }
+
+.botones{
+    display: flex;
+    justify-content: space-around;
+    margin: 20px;
+}
