--- a/src/app/components/productos/productos.component.scss
+++ b/src/app/components/productos/productos.component.scss
@@ -1,3 +1,4 @@
+@import "src/styles.scss";
 
 .container{
     margin-top: 10px;
@@ -24,7 +25,7 @@
         justify-content: center;
 
         input{
-            border: 1px solid #eee;
+            border: 1px solid $amarillo;
             position: relative; 
             padding: 5px;
             padding-right: 5px;
@@ -32,7 +33,21 @@
             float: left;
             display: block;
         }
-        input[type=number]::-webkit-inner-spin-button,
+        .quantity input[type=number]::-webkit-inner-spin-button,
+        .quantity input[type=number]::-webkit-outer-spin-button{
+            -webkit-appearance:none;
+        }
+        button{
+            border: 1px solid $amarillo;
+            background-color: #eee;
+            position: relative; 
+            padding: 5px;
+            padding-right: 5px;
+            width: 3em;
+            float: left;
+            display: block;
+        }
+        /*input[type=number]::-webkit-inner-spin-button,
         input[type=number]::-webkit-outer-spin-button {
             opacity: 1;
         }
@@ -44,7 +59,7 @@
             top: 0;
             right: 0;
             height: 100%;
-      }
+        }*/
     }
 }
 
