Estilos de login completos

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<p>login works!</p>
+
 <div class="container-sm">
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Usuario</label>
@@ -6,6 +6,14 @@
     </div>
     <div class="mb-3">
         <label for="inputPassword5" class="form-label">Contraseña</label>
-        <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock">
+        <input type="password" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock" placeholder="******">
     </div>
+    <div class="mb-3 forgot-container">
+        <a class="forgot">Olvidé mi contraseña</a>
+    </div>
+    <div class="mt-5 botones">
+        <button type="submit" class="btn btn-warning boton">Ingresar</button>
+        <button type="button" class="btn btn-warning boton">Registro</button>
+    </div>
+    
 </div>
