Estilos de login modificados para adaptarse al negocio

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 
 <div class="container-sm">
     <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Usuario</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <label for="exampleFormControlInput1" class="form-label">Código de trabajador</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="NOMBRE12345">
     </div>
     <div class="mb-3">
         <label for="inputPassword5" class="form-label">Contraseña</label>
@@ -13,7 +13,7 @@
     </div>
     <div class="mt-5 botones">
         <button type="submit" class="btn btn-warning boton">Ingresar</button>
-        <button type="button" class="btn btn-warning boton">Registro</button>
+        <!--<button type="button" class="btn btn-warning boton">Registro</button>-->
     </div>
     
 </div>
