--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -18,7 +18,11 @@ label{
 }
 
 .botones{
+    display: flex;
+    justify-content: center;
     .boton{
+        padding: 0.5em 3em;
+        
         &:hover{
             background-color: $crema;
             border-color: $crema;
@@ -29,26 +33,19 @@ label{
 
 @media screen and (max-width: 768px){
     .botones{
-        height: 7em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1.5em;
 
         .boton{
-            flex-grow: 1;
-            padding: 0 6em;
+            //flex-grow: 1;
+            
         }
     }
 }
 
 @media screen and (min-width: 768px) {
     .botones{
-        display: flex;
-        justify-content: start;
-        gap: 3em;
+
         .boton{
-            padding: 0.5em 3em;
+            //padding: 0.5em 3em;
         }
     }
     .container-sm{
@@ -58,9 +55,7 @@ label{
 
 @media screen and (min-width: 992px) {
     .botones{
-        display: flex;
-        justify-content: start;
-        gap: 3em;
+
     }
     .container-sm{
         padding: 0 10em;
