Modificado tamaño de letra y agregado componente admin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
 .navbar{
     //background-color: #F2CEAE;
     background: linear-gradient(180deg, $naranja, 30%, $crema);
+    font-size: 1.7em;
 }
 
 .redondear{
