--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,15 +10,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li *ngIf="token != null" class="nav-item">
+          <a class="nav-link" routerLink="admin">Administración</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="mesas">Mesas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="productos">Productos</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" routerLink="pedidos">Pedidos</a>
         </li>
+        <!--<li *ngIf="token != null" class="nav-item" role="presentation">
+          <a class="nav-link" >{{ user }}</a>
+        </li>-->
       </ul>
     </div>
   </div>
