Se puede agregar productos

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,9 +9,9 @@
             <label for="inputPassword5" class="form-label">Contraseña</label>
             <input type="password" formControlName="pwd" id="inputPassword5" class="form-control" aria-labelledby="passwordHelpBlock" placeholder="******">
         </div>
-        <div class="mb-3 forgot-container">
+        <!--<div class="mb-3 forgot-container">
             <a class="forgot">Olvidé mi contraseña</a>
-        </div>
+        </div>-->
         <div class="mt-5 botones">
             <button (click)="onSubmit()" type="submit" [disabled]="loginForm.invalid" class="btn btn-warning boton">Ingresar</button>
             <!--<button type="button" class="btn btn-warning boton">Registro</button>-->
